<resources>
    <string name="app_name">A SQLiteOpenHelper Demo</string>
    <string name="layout_main_id">Data Id</string>
    <string name="layout_main_province">Province</string>
    <string name="layout_main_city">City</string>
    <string name="layout_main_district">District</string>
    <string name="layout_main_insert_action">Insert</string>
    <string name="layout_main_delete_action">Delete</string>
    <string name="layout_main_update_action">Update</string>
    <string name="layout_main_query_action">Query</string>
    <string name="layout_main_reset_action">Reset Table</string>
    <string name="layout_main_principle">Id must be unique in insert action\nId must be the only input in delete action\nId and content are needed in update action\nOnly one item is needed in query action</string>
</resources>
