<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.endergeek.rookie.sqliteopenhelperdemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <EditText
            android:id="@+id/et_main_id"
            android:layout_width="@dimen/activity_et_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/layout_main_id"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true"
            />
        <EditText
            android:id="@+id/et_main_province"
            android:layout_width="@dimen/activity_et_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/layout_main_province"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            />
        <EditText
            android:id="@+id/et_main_city"
            android:layout_width="@dimen/activity_et_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/layout_main_city"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            />
        <EditText
            android:id="@+id/et_main_district"
            android:layout_width="@dimen/activity_et_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/layout_main_district"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_main_insert"
            android:layout_width="@dimen/activity_btn_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/layout_main_insert_action"/>
        <Button
            android:id="@+id/btn_main_delete"
            android:layout_width="@dimen/activity_btn_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/layout_main_delete_action"/>
        <Button
            android:id="@+id/btn_main_update"
            android:layout_width="@dimen/activity_btn_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/layout_main_update_action"/>
        <Button
            android:id="@+id/btn_main_query"
            android:layout_width="@dimen/activity_btn_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/layout_main_query_action"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/layout_main_principle"
        android:textSize="@dimen/activity_tv_txt_size"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:gravity="center">
        <Button
            android:id="@+id/btn_main_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/layout_main_reset_action"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_main_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/activity_tv_txt_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="@dimen/activity_btn_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:gravity="center"
            android:text="@string/layout_main_id"/>
        <TextView
            android:layout_width="@dimen/activity_btn_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:gravity="center"
            android:text="@string/layout_main_province"/>
        <TextView
            android:layout_width="@dimen/activity_btn_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:gravity="center"
            android:text="@string/layout_main_city"/>
        <TextView
            android:layout_width="@dimen/activity_btn_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:gravity="center"
            android:text="@string/layout_main_district"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
